Updated copyright to "OpenSky project"

--- a/OpenSky.Client/Views/Startup.xaml
+++ b/OpenSky.Client/Views/Startup.xaml
@@ -1,7 +1,7 @@
 ﻿<!-- 
 ====================================================================================================================
 <copyright file="Startup.xaml" company="OpenSky">
-  sushi.at for OpenSky 2021
+  OpenSky project 2021
 </copyright>
 <summary>
   Startup window
