--- a/OpenSky.Client/Views/LoginNotification.xaml
+++ b/OpenSky.Client/Views/LoginNotification.xaml
@@ -1,7 +1,7 @@
 ﻿<!-- 
 ====================================================================================================================
 <copyright file="LoginNotification.xaml" company="OpenSky">
-  sushi.at for OpenSky 2021
+  OpenSky project 2021
 </copyright>
 <summary>
   Login required notification window
