Got dockable/dragable tab container library added
Needs styling and code cleanup

--- a/OpenSky.Client/App.xaml
+++ b/OpenSky.Client/App.xaml
@@ -32,6 +32,8 @@
                 </ui:ThemeResources>
                 <ui:XamlControlsResources />
 
+                <!--<ResourceDictionary Source="MaterialDesign.xaml" />-->
+
                 <ResourceDictionary Source="VectorGraphics.xaml" />
                 <ResourceDictionary Source="OpenSkyStyles.xaml" />
             </ResourceDictionary.MergedDictionaries>
