--- a/OpenSky.Client/Views/Startup.xaml
+++ b/OpenSky.Client/Views/Startup.xaml
@@ -25,25 +25,25 @@
                 <EasingDoubleKeyFrame KeyTime="0:0:4" Value="360"/>
             </DoubleAnimationUsingKeyFrames>
         </Storyboard>
+        <!-- ReSharper disable once Xaml.RedundantResource -->
         <Storyboard x:Key="HideWindow">
             <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="Window">
                 <DiscreteObjectKeyFrame KeyTime="0" Value="{x:Static Visibility.Visible}"/>
-                <DiscreteObjectKeyFrame KeyTime="0:0:4.5" Value="{x:Static Visibility.Collapsed}"/>
+                <DiscreteObjectKeyFrame KeyTime="0:0:0.5" Value="{x:Static Visibility.Collapsed}"/>
             </ObjectAnimationUsingKeyFrames>
             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="Window">
-                <EasingDoubleKeyFrame KeyTime="0:0:4" Value="1"/>
-                <EasingDoubleKeyFrame KeyTime="0:0:4.5" Value="0"/>
+                <EasingDoubleKeyFrame KeyTime="0:0:0" Value="1"/>
+                <EasingDoubleKeyFrame KeyTime="0:0:0.5" Value="0"/>
             </DoubleAnimationUsingKeyFrames>
         </Storyboard>
     </Window.Resources>
     <Window.Triggers>
         <EventTrigger RoutedEvent="FrameworkElement.Loaded">
             <BeginStoryboard Storyboard="{StaticResource LogoAnimation}"/>
-            <BeginStoryboard Storyboard="{StaticResource HideWindow}"/>
         </EventTrigger>
     </Window.Triggers>
     <Window.DataContext>
-        <models:StartupViewModel />
+        <models:StartupViewModel CloseWindow="StartupViewModelOnCloseWindow" />
     </Window.DataContext>
     <Grid>
         <Grid.RowDefinitions>
