--- a/OpenSky.Client/Views/Main.xaml
+++ b/OpenSky.Client/Views/Main.xaml
@@ -27,9 +27,9 @@
         <ResourceDictionary>
             <dragablz:InterTabController x:Key="InterTabController" x:Shared="False" InterTabClient="{Binding InterTabClient}" Partition="2AE89D18-F236-4D20-9605-6C03319038E6" />
             <DataTemplate DataType="{x:Type dragablz:HeaderedItemViewModel}">
-                <ContentControl Content="{Binding Content}" Margin="4 4 4 4" FontSize="27" />
+                <ContentControl Content="{Binding Content}" Margin="4 4 4 4" FontSize="13" />
             </DataTemplate>
-            <Style TargetType="{x:Type dragablz:TabablzControl}" x:Key="TabablzControlStyle">
+            <Style TargetType="{x:Type dragablz:TabablzControl}" x:Key="TabablzControlStyle" BasedOn="{StaticResource OpenSkyTabablzStyle}">
                 <Setter Property="ItemsSource" Value="{Binding Items}" />
                 <Setter Property="ClosingItemCallback" Value="{Binding ClosingTabItemHandler}" />
                 <Setter Property="ShowDefaultCloseButton" Value="True" />
