Completed theme for tab control
Documented and cleanup up code
If we want to use tool windows that still needs a style

--- a/OpenSky.Client/App.xaml
+++ b/OpenSky.Client/App.xaml
@@ -32,10 +32,10 @@
                 </ui:ThemeResources>
                 <ui:XamlControlsResources />
 
-                <!--<ResourceDictionary Source="MaterialDesign.xaml" />-->
-
                 <ResourceDictionary Source="VectorGraphics.xaml" />
                 <ResourceDictionary Source="OpenSkyStyles.xaml" />
+                <ResourceDictionary Source="GridFilter.xaml" />
+                <ResourceDictionary Source="TabControls.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
