--- a/OpenSky.Client/Pages/Settings.xaml
+++ b/OpenSky.Client/Pages/Settings.xaml
@@ -1,13 +1,23 @@
-﻿<UserControl x:Class="OpenSky.Client.Pages.Settings"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:OpenSky.Client.Pages"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+﻿<!-- 
+====================================================================================================================
+<copyright file="Startup.xaml" company="OpenSky">
+  OpenSky project 2021
+</copyright>
+<summary>
+  Settings page
+</summary>
+====================================================================================================================
+-->
+
+<UserControl x:Class="OpenSky.Client.Pages.Settings"
+                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+                 mc:Ignorable="d" 
+                 d:DesignHeight="450" d:DesignWidth="800">
     <WrapPanel>
-         <TextBlock>UserName</TextBlock>   
+        <TextBlock>Settings page will be created here</TextBlock>   
         <TextBox>123</TextBox>
         <Button Style="{StaticResource OpenSkyButtonStyle}">Test me</Button>
     </WrapPanel>
