--- a/OpenSky.Client/Views/Main.xaml
+++ b/OpenSky.Client/Views/Main.xaml
@@ -29,8 +29,8 @@
             <DataTemplate DataType="{x:Type dragablz:HeaderedItemViewModel}">
                 <ContentControl Content="{Binding Content}" Margin="4 4 4 4" FontSize="13" />
             </DataTemplate>
-            <Style TargetType="{x:Type dragablz:TabablzControl}" x:Key="TabablzControlStyle" BasedOn="{StaticResource OpenSkyTabablzStyle}">
-                <Setter Property="ItemsSource" Value="{Binding Items}" />
+            <Style TargetType="{x:Type controls:TabablzControlEx}" x:Key="TabablzControlStyle" BasedOn="{StaticResource OpenSkyTabablzStyle}">
+                <Setter Property="ItemsSource" Value="{Binding PageItems}" />
                 <Setter Property="ClosingItemCallback" Value="{Binding ClosingTabItemHandler}" />
                 <Setter Property="ShowDefaultCloseButton" Value="True" />
                 <Setter Property="HeaderMemberPath" Value="Header" />
@@ -41,11 +41,23 @@
     </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="300" />
+            <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
 
-        <dockablz:Layout Grid.Column="1" Partition="621A5E33-54F1-4936-95FD-357BCFFB12BA"
+        <Grid Grid.Column="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="40" />
+                <ColumnDefinition Width="250" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="1*" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+        </Grid>
+
+        <dockablz:Layout Grid.Column="1" Partition="2AE89D18-F236-4D20-9605-6C03319038E6"
                          FloatingItemHeaderMemberPath="Header"
                          IsFloatDropZoneEnabled="False"
                          FloatingItemsContainerMargin="8"
@@ -55,23 +67,23 @@
             <!-- branch template lets dragablz create a new tab control after a window is split via docking -->
             <dockablz:Layout.BranchTemplate>
                 <DataTemplate>
-                    <dragablz:TabablzControl Style="{StaticResource TabablzControlStyle}" Margin="8">
+                    <controls:TabablzControlEx Style="{StaticResource TabablzControlStyle}" Margin="8">
                         <dragablz:TabablzControl.InterTabController>
-                            <dragablz:InterTabController InterTabClient="{Binding InterTabClient}" Partition="621A5E33-54F1-4936-95FD-357BCFFB12BA" />
+                            <dragablz:InterTabController InterTabClient="{Binding InterTabClient}" Partition="2AE89D18-F236-4D20-9605-6C03319038E6" />
                         </dragablz:TabablzControl.InterTabController>
-                    </dragablz:TabablzControl>
+                    </controls:TabablzControlEx>
                 </DataTemplate>
             </dockablz:Layout.BranchTemplate>
             <!-- a root, named tab control is needed, so when a tab is torn and a new window is created, the new target tab control can be identified -->
-            <dragablz:TabablzControl  Margin="8" x:Name="InitialTabablzControl"
-                                      FixedHeaderCount="1"
-                                      Style="{StaticResource TabablzControlStyle}"
-                                      AddLocationHint="After" 
-                                      IsDraggingWindowChanged="TabablzControlOnIsDraggingWindowChanged">
+            <controls:TabablzControlEx  Margin="8" x:Name="InitialTabablzControl"
+                                              FixedHeaderCount="1"
+                                              Style="{StaticResource TabablzControlStyle}"
+                                              AddLocationHint="After" 
+                                              IsDraggingWindowChanged="TabablzControlOnIsDraggingWindowChanged">
                 <dragablz:TabablzControl.InterTabController>
                     <dragablz:InterTabController Partition="621A5E33-54F1-4936-95FD-357BCFFB12BA"  />
                 </dragablz:TabablzControl.InterTabController>
-            </dragablz:TabablzControl>
+            </controls:TabablzControlEx>
         </dockablz:Layout>
     </Grid>
 </controls:OpenSkyWindow>
