--- a/OpenSky.Client/App.xaml
+++ b/OpenSky.Client/App.xaml
@@ -32,10 +32,10 @@
                 </ui:ThemeResources>
                 <ui:XamlControlsResources />
 
-                <ResourceDictionary Source="VectorGraphics.xaml" />
-                <ResourceDictionary Source="OpenSkyStyles.xaml" />
-                <ResourceDictionary Source="GridFilter.xaml" />
-                <ResourceDictionary Source="TabControls.xaml" />
+                <ResourceDictionary Source="Themes/VectorGraphics.xaml" />
+                <ResourceDictionary Source="Themes/OpenSkyStyles.xaml" />
+                <ResourceDictionary Source="Themes/GridFilter.xaml" />
+                <ResourceDictionary Source="Themes/TabControls.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
