--- a/OpenSky.Client/Themes/TabControls.xaml
+++ b/OpenSky.Client/Themes/TabControls.xaml
@@ -384,7 +384,7 @@
                                 <Condition Property="IsMouseOver" Value="True" />
                                 <Condition Property="IsSelected" Value="True" />
                             </MultiTrigger.Conditions>
-                            <Setter TargetName="TabContainer" Property="Background" Value="#05826c" />
+                            <Setter TargetName="TabContainer" Property="Background" Value="#1a1e22" />
                             <Setter TargetName="ContentPresenter" Property="TextElement.Foreground" Value="{DynamicResource TabViewItemHeaderForegroundPointerOver}" />
                             <Setter TargetName="IconControl" Property="Foreground" Value="{DynamicResource TabViewItemIconForegroundPointerOver}" />
                             <Setter Property="Panel.ZIndex" Value="1" />
