--- a/OpenSky.Client/Views/Main.xaml
+++ b/OpenSky.Client/Views/Main.xaml
@@ -19,6 +19,7 @@
                             xmlns:dockablz="http://dragablz.net/winfx/xaml/dockablz"
                             xmlns:models="clr-namespace:OpenSky.Client.Views.Models"
                             xmlns:ui="http://schemas.modernwpf.com/2019"
+                            xmlns:converters="clr-namespace:OpenSky.Client.Converters"
                             mc:Ignorable="d"
                             Title="OpenSky" Height="800" Width="1400" Closed="MainOnClosed" HorizontalScrollBar="False" VerticalScrollBar="False">
     <Window.DataContext>
@@ -40,54 +41,66 @@
                 <Setter Property="HeaderMemberPath" Value="Header" />
                 <Setter Property="MinWidth" Value="300" />
                 <Setter Property="InterTabController" Value="{StaticResource InterTabController}" />
-                <Setter Property="Margin" Value="0 8 0 0" />
             </Style>
         </ResourceDictionary>
     </Window.Resources>
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="1*" />
+        </Grid.ColumnDefinitions>
         <Grid.Resources>
+            <converters:NavigationViewBitmapIconConverter x:Key="NavigationViewBitmapIconConverter" />
             <DataTemplate x:Key="NavigationViewMenuItem" DataType="models:NavMenuItem">
-                <ui:NavigationViewItem FontFamily="/Fonts/#Montserrat" Content="{Binding Name}" Icon="{Binding Icon}" MenuItemsSource="{Binding Children}"/>
+                <ui:NavigationViewItem 
+                    FontFamily="/Fonts/#Montserrat" 
+                    Content="{Binding Name}" 
+                    Icon="{Binding Icon, Converter={StaticResource NavigationViewBitmapIconConverter}}"
+                    MenuItemsSource="{Binding Children}"
+                    SelectsOnInvoked="True"
+                    ToolTip="Test me"/>
             </DataTemplate>
+            <!-- ReSharper disable once Xaml.RedundantResource -->
             <SolidColorBrush x:Key="NavigationViewExpandedPaneBackground" Color="#1a1e22" />
         </Grid.Resources>
-        <ui:NavigationView x:Name="NavigationView" 
-            IsBackButtonVisible="Collapsed" IsSettingsVisible="False" IsPaneOpen="True" CompactModeThresholdWidth="0" PaneTitle="Your airline name here"
-            MenuItemsSource="{Binding NavigationItems, Mode=OneWay}" 
-            FooterMenuItemsSource="{Binding NavigationFooterItems, Mode=OneWay}"
-            SelectedItem="{Binding SelectedNavMenuItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-            MenuItemTemplate="{StaticResource NavigationViewMenuItem}" FontFamily="/Fonts/#Montserrat">
+        <ui:NavigationView Grid.Column="0" x:Name="NavigationView" 
+                           IsBackButtonVisible="Collapsed" IsSettingsVisible="False" IsPaneOpen="True" CompactModeThresholdWidth="0" PaneTitle="Your airline name here"
+                           MenuItemsSource="{Binding NavigationItems, Mode=OneWay}" 
+                           FooterMenuItemsSource="{Binding NavigationFooterItems, Mode=OneWay}"
+                           SelectedItem="{Binding SelectedNavMenuItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                           MenuItemTemplate="{StaticResource NavigationViewMenuItem}" FontFamily="/Fonts/#Montserrat">
 
-            <dockablz:Layout Partition="2AE89D18-F236-4D20-9605-6C03319038E6"
-                             FloatingItemHeaderMemberPath="Header"
-                             IsFloatDropZoneEnabled="False"
-                             FloatingItemsContainerMargin="8"
-                             HorizontalAlignment="Stretch"
-                             VerticalAlignment="Stretch"
-                             FloatingItemsSource="{Binding ToolItems}"
-                             ClosingFloatingItemCallback="{Binding ClosingFloatingItemHandler}">
+            
+        </ui:NavigationView>
 
-                <!-- branch template lets dragablz create a new tab control after a window is split via docking -->
-                <dockablz:Layout.BranchTemplate>
-                    <DataTemplate>
-                        <controls:TabablzControlEx Style="{StaticResource TabablzControlStyle}" Margin="8">
-                            <dragablz:TabablzControl.InterTabController>
-                                <dragablz:InterTabController InterTabClient="{Binding InterTabClient}" Partition="2AE89D18-F236-4D20-9605-6C03319038E6" />
-                            </dragablz:TabablzControl.InterTabController>
-                        </controls:TabablzControlEx>
-                    </DataTemplate>
-                </dockablz:Layout.BranchTemplate>
-                <!-- a root, named tab control is needed, so when a tab is torn and a new window is created, the new target tab control can be identified -->
-                <controls:TabablzControlEx  Margin="8" x:Name="InitialTabablzControl"
+        <dockablz:Layout Grid.Column="1" Partition="2AE89D18-F236-4D20-9605-6C03319038E6"
+                         FloatingItemHeaderMemberPath="Header"
+                         IsFloatDropZoneEnabled="False"
+                         HorizontalAlignment="Stretch"
+                         VerticalAlignment="Stretch"
+                         FloatingItemsSource="{Binding ToolItems}"
+                         ClosingFloatingItemCallback="{Binding ClosingFloatingItemHandler}">
+
+            <!-- branch template lets dragablz create a new tab control after a window is split via docking -->
+            <dockablz:Layout.BranchTemplate>
+                <DataTemplate>
+                    <controls:TabablzControlEx Style="{StaticResource TabablzControlStyle}">
+                        <dragablz:TabablzControl.InterTabController>
+                            <dragablz:InterTabController InterTabClient="{Binding InterTabClient}" Partition="2AE89D18-F236-4D20-9605-6C03319038E6" />
+                        </dragablz:TabablzControl.InterTabController>
+                    </controls:TabablzControlEx>
+                </DataTemplate>
+            </dockablz:Layout.BranchTemplate>
+            <!-- a root, named tab control is needed, so when a tab is torn and a new window is created, the new target tab control can be identified -->
+            <controls:TabablzControlEx x:Name="InitialTabablzControl"
                                               FixedHeaderCount="1"
                                               Style="{StaticResource TabablzControlStyle}"
                                               AddLocationHint="After" 
                                               IsDraggingWindowChanged="TabablzControlOnIsDraggingWindowChanged">
-                    <dragablz:TabablzControl.InterTabController>
-                        <dragablz:InterTabController Partition="621A5E33-54F1-4936-95FD-357BCFFB12BA"  />
-                    </dragablz:TabablzControl.InterTabController>
-                </controls:TabablzControlEx>
-            </dockablz:Layout>
-        </ui:NavigationView>
+                <dragablz:TabablzControl.InterTabController>
+                    <dragablz:InterTabController Partition="621A5E33-54F1-4936-95FD-357BCFFB12BA"  />
+                </dragablz:TabablzControl.InterTabController>
+            </controls:TabablzControlEx>
+        </dockablz:Layout>
     </Grid>
 </controls:OpenSkyWindow>
