--- a/OpenSky.Client/Pages/Settings.xaml
+++ b/OpenSky.Client/Pages/Settings.xaml
@@ -15,8 +15,8 @@
                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
                  mc:Ignorable="d" 
-                 d:DesignHeight="450" d:DesignWidth="800">
-    <WrapPanel>
+                 d:DesignHeight="450" d:DesignWidth="800" FontSize="15" Foreground="White" FontFamily="/Fonts/#Montserrat">
+    <WrapPanel Margin="15">
         <TextBlock>Settings page will be created here</TextBlock>   
         <TextBox>123</TextBox>
         <Button Style="{StaticResource OpenSkyButtonStyle}">Test me</Button>
