Got docking manager working mostly as desired
A few small things still need extra styling/customization
A few minor bugs (close all but this, caused navigation to get stuck) still exist

--- a/OpenSky.Client/Pages/Settings.xaml
+++ b/OpenSky.Client/Pages/Settings.xaml
@@ -1,6 +1,6 @@
 ﻿<!-- 
 ====================================================================================================================
-<copyright file="Startup.xaml" company="OpenSky">
+<copyright file="Settings.xaml" company="OpenSky">
   OpenSky project 2021
 </copyright>
 <summary>
