--- a/OpenSky.Client/Pages/DataImport.xaml
+++ b/OpenSky.Client/Pages/DataImport.xaml
@@ -1,6 +1,6 @@
 ﻿<!-- 
 ====================================================================================================================
-<copyright file="Startup.xaml" company="OpenSky">
+<copyright file="DataImport.xaml" company="OpenSky">
   OpenSky project 2021
 </copyright>
 <summary>
@@ -14,7 +14,6 @@
                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-                 xmlns:local="clr-namespace:OpenSky.Client.Pages"
                  mc:Ignorable="d" 
                  d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
