--- a/OpenSky.Client/Controls/DockingAdapter.xaml
+++ b/OpenSky.Client/Controls/DockingAdapter.xaml
@@ -22,19 +22,9 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Syncfusion.Themes.MaterialDark.Wpf;component/dockingmanager/dockingmanager.xaml" />
-                <ResourceDictionary Source="/Syncfusion.Themes.MaterialDark.Wpf;component/documentcontainer/documentcontainer.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            <Style x:Key="OpenSkyTabItemStyle" TargetType="{x:Type syncfusion:TabItemExt}" BasedOn="{StaticResource SyncfusionDocumentTabItemExtStyle}">
-                <!--<Setter Property="ImageHeight" Value="16" />
-                <Setter Property="ImageWidth" Value="16" />
-                <Setter Property="ImageAlignment" Value="LeftOfText" />-->
+            <Style x:Key="OpenSkyDocumentTabItemStyle" TargetType="{x:Type syncfusion:TabItemExt}" BasedOn="{StaticResource SyncfusionDocumentTabItemExtStyle}">
                 <Setter Property="Height" Value="32"></Setter>
-            </Style>
-            <Style x:Key="OpenSkyTabControlStyle" TargetType="{x:Type syncfusion:TabControlExt}" BasedOn="{StaticResource SyncfusionDocumentTabControlExtStyle}">
-                <!--<Setter Property="ImageHeight" Value="16" />
-                <Setter Property="ImageWidth" Value="16" />
-                <Setter Property="ImageAlignment" Value="LeftOfText" />-->
-                <Setter Property="CloseButtonType" Value="Individual" />
             </Style>
             <DataTemplate x:Key="DocumentTabHeaderItemTemplate" DataType="{x:Type controls:DocumentHeaderEx}">
                 <DataTemplate.Resources>
@@ -43,15 +33,16 @@
                         <Setter Property="VerticalAlignment" Value="Center"/>
                     </Style>
                 </DataTemplate.Resources>
-                <Grid Height="23">
+                <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
-                    <Image Grid.Column="0" Width="16" Height="16" Stretch="Fill" Source="{Binding Icon}" />
+                    <Image Grid.Column="0" Width="16" Height="16" SnapsToDevicePixels="True" Source="{Binding Icon}" />
                     <TextBlock Grid.Column="1" Margin="5 0" VerticalAlignment="Center" Text ="{Binding Text}"/>
                 </Grid>
             </DataTemplate>
+            
         </ResourceDictionary>
     </UserControl.Resources>
     <Grid>
@@ -62,10 +53,12 @@
                                    Loaded="PART_DockingManager_Loaded"
                                    CloseButtonClick="PART_DockingManager_CloseButtonClick"
                                    WindowClosing="PART_DockingManager_OnWindowClosing"
+                                   CloseAllTabs="PART_DockingManager_OnCloseAllTabs"
+                                   CloseOtherTabs="PART_DockingManager_OnCloseOtherTabs"
                                    ActiveWindowChanged="PART_DockingManager_ActiveWindowChanged"
-                                   NativeFloatWindowStyleMode="SingleBorderWindow"
-                                   DocumentTabControlStyle="{StaticResource OpenSkyTabControlStyle}"
-                                   DocumentTabItemStyle="{StaticResource OpenSkyTabItemStyle}"
+                                   UseNativeFloatWindow="False"
+                                   DockStateChanged="PART_DockingManager_OnDockStateChanged"
+                                   DocumentTabItemStyle="{StaticResource OpenSkyDocumentTabItemStyle}"
                                    syncfusion:DocumentContainer.HeaderTemplate="{StaticResource DocumentTabHeaderItemTemplate}">
         </syncfusion:DockingManager>
     </Grid>
