--- a/OpenSky.Client/Pages/Settings.xaml
+++ b/OpenSky.Client/Pages/Settings.xaml
@@ -13,9 +13,30 @@
                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                 xmlns:ui="http://schemas.modernwpf.com/2019"
                  mc:Ignorable="d" 
                  d:DesignHeight="450" d:DesignWidth="800" FontSize="15" Foreground="White" FontFamily="/Fonts/#Montserrat">
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ui:ThemeResources RequestedTheme="Dark">
+                    <ui:ThemeResources.ThemeDictionaries>
+                        <ResourceDictionary x:Key="Dark">
+                            <ResourceDictionary.MergedDictionaries>
+                                <ui:ColorPaletteResources
+                                    TargetTheme="Dark"
+                                    Accent="#05826c"
+                                    AltHigh="#404040"
+                                    BaseHigh="#FFC9C9C9"/>
+                            </ResourceDictionary.MergedDictionaries>
+                        </ResourceDictionary>
+                    </ui:ThemeResources.ThemeDictionaries>
+                </ui:ThemeResources>
+                <ui:XamlControlsResources />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
     <WrapPanel Margin="15">
         <TextBlock>Settings page will be created here</TextBlock>   
         <TextBox>123</TextBox>
