--- a/OpenSky.Client/Pages/Settings.xaml
+++ b/OpenSky.Client/Pages/Settings.xaml
@@ -15,8 +15,12 @@
                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                  xmlns:ui="http://schemas.modernwpf.com/2019"
+                 xmlns:models="clr-namespace:OpenSky.Client.Pages.Models"
                  mc:Ignorable="d" 
-                 d:DesignHeight="450" d:DesignWidth="800" FontSize="15" Foreground="White" FontFamily="/Fonts/#Montserrat">
+                 d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.DataContext>
+        <models:SettingsViewModel />
+    </UserControl.DataContext>
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -34,12 +38,42 @@
                     </ui:ThemeResources.ThemeDictionaries>
                 </ui:ThemeResources>
                 <ui:XamlControlsResources />
+
+                <ResourceDictionary Source="/Themes/VectorGraphics.xaml" />
+                <ResourceDictionary Source="/Themes/OpenSkyStyles.xaml" />
+                <ResourceDictionary Source="/Themes/GridFilter.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
-    <WrapPanel Margin="15">
-        <TextBlock>Settings page will be created here</TextBlock>   
-        <TextBox>123</TextBox>
-        <Button Style="{StaticResource OpenSkyButtonStyle}">Test me</Button>
-    </WrapPanel>
+    <StackPanel Orientation="Vertical" Margin="15" Grid.IsSharedSizeScope="True">
+        <GroupBox>
+            <GroupBox.Header>
+                <TextBlock FontSize="15" FontWeight="DemiBold">Keys and Users</TextBlock>
+            </GroupBox.Header>
+            <Grid Margin="5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" SharedSizeGroup="Labels" />
+                    <ColumnDefinition Width="1*" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">OpenSky user</TextBlock>
+                <Grid Grid.Row="0" Grid.Column="1" Margin="10,5,0,5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" VerticalAlignment="Center" Text="{Binding UserSession.Username}" />
+                    <Button Style="{StaticResource OpenSkyButtonStyle}" Grid.Column="1" Margin="3,0" Command="{Binding LoginOpenSkyUserCommand}">Login</Button>
+                    <Button Style="{StaticResource OpenSkyButtonStyle}" Grid.Column="2" Command="{Binding LogoutOpenSkyUserCommand}">Logout</Button>
+                </Grid>
+            </Grid>
+        </GroupBox>
+        <StackPanel Orientation="Horizontal" Margin="5,10,5,0">
+            <Button Padding="5,3" Style="{StaticResource OpenSkyButtonStyle}" Command="{Binding SaveSettingsCommand}">Save</Button>
+            <Button VerticalAlignment="Center" Margin="5,0,0,0" Padding="5,3" Command="{Binding RestoreDefaultsCommand}">Restore Defaults</Button>
+        </StackPanel>
+    </StackPanel>
 </UserControl>
