--- a/OpenSky.Client/Pages/DataImport.xaml
+++ b/OpenSky.Client/Pages/DataImport.xaml
@@ -9,14 +9,24 @@
 ====================================================================================================================
 -->
 
-<UserControl x:Class="OpenSky.Client.Pages.DataImport"
+<controls:OpenSkyPage x:Class="OpenSky.Client.Pages.DataImport"
                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                 xmlns:controls="clr-namespace:OpenSky.Client.Controls"
                  mc:Ignorable="d" 
                  d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <TextBlock>Data import will be here</TextBlock> 
-    </Grid>
-</UserControl>
+    <StackPanel Orientation="Vertical" Margin="15">
+        <GroupBox Header="Little Navmap">
+            <Grid Margin="5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" VerticalAlignment="Center">Upload Little Navmap database with MSFS airport data</TextBlock>
+                <Button Grid.Column="1" Style="{StaticResource OpenSkyButtonStyle}">Browse...</Button>
+            </Grid>
+        </GroupBox>
+    </StackPanel>
+</controls:OpenSkyPage>
