--- a/OpenSky.Client/Pages/Settings.xaml
+++ b/OpenSky.Client/Pages/Settings.xaml
@@ -9,46 +9,22 @@
 ====================================================================================================================
 -->
 
-<UserControl x:Class="OpenSky.Client.Pages.Settings"
+<controls:OpenSkyPage x:Class="OpenSky.Client.Pages.Settings"
                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                 xmlns:ui="http://schemas.modernwpf.com/2019"
                  xmlns:models="clr-namespace:OpenSky.Client.Pages.Models"
+                 xmlns:controls="clr-namespace:OpenSky.Client.Controls"
                  mc:Ignorable="d" 
                  d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.DataContext>
         <models:SettingsViewModel />
     </UserControl.DataContext>
-    <UserControl.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ui:ThemeResources RequestedTheme="Dark">
-                    <ui:ThemeResources.ThemeDictionaries>
-                        <ResourceDictionary x:Key="Dark">
-                            <ResourceDictionary.MergedDictionaries>
-                                <ui:ColorPaletteResources
-                                    TargetTheme="Dark"
-                                    Accent="#05826c"
-                                    AltHigh="#404040"
-                                    BaseHigh="#FFC9C9C9"/>
-                            </ResourceDictionary.MergedDictionaries>
-                        </ResourceDictionary>
-                    </ui:ThemeResources.ThemeDictionaries>
-                </ui:ThemeResources>
-                <ui:XamlControlsResources />
-
-                <ResourceDictionary Source="/Themes/VectorGraphics.xaml" />
-                <ResourceDictionary Source="/Themes/OpenSkyStyles.xaml" />
-                <ResourceDictionary Source="/Themes/GridFilter.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </UserControl.Resources>
     <StackPanel Orientation="Vertical" Margin="15" Grid.IsSharedSizeScope="True">
         <GroupBox>
             <GroupBox.Header>
-                <TextBlock FontSize="15" FontWeight="DemiBold">Keys and Users</TextBlock>
+                <TextBlock FontSize="15" FontWeight="DemiBold">OpenSky Account</TextBlock>
             </GroupBox.Header>
             <Grid Margin="5">
                 <Grid.ColumnDefinitions>
@@ -58,7 +34,7 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">OpenSky user</TextBlock>
+                <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">OpenSky user:</TextBlock>
                 <Grid Grid.Row="0" Grid.Column="1" Margin="10,5,0,5">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
@@ -72,8 +48,8 @@
             </Grid>
         </GroupBox>
         <StackPanel Orientation="Horizontal" Margin="5,10,5,0">
-            <Button Padding="5,3" Style="{StaticResource OpenSkyButtonStyle}" Command="{Binding SaveSettingsCommand}">Save</Button>
-            <Button VerticalAlignment="Center" Margin="5,0,0,0" Padding="5,3" Command="{Binding RestoreDefaultsCommand}">Restore Defaults</Button>
+            <Button Padding="5,5" Style="{StaticResource OpenSkyButtonStyle}" Command="{Binding SaveSettingsCommand}">Save</Button>
+            <Button VerticalAlignment="Center" Margin="5,0,0,0" Padding="5,5" Command="{Binding RestoreDefaultsCommand}">Restore Defaults</Button>
         </StackPanel>
     </StackPanel>
-</UserControl>
+</controls:OpenSkyPage>
