--- a/OpenSky.Client/Pages/Welcome.xaml
+++ b/OpenSky.Client/Pages/Welcome.xaml
@@ -9,35 +9,15 @@
 ====================================================================================================================
 -->
 
-<UserControl x:Class="OpenSky.Client.Pages.Welcome"
+<controls:OpenSkyPage x:Class="OpenSky.Client.Pages.Welcome"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:ui="http://schemas.modernwpf.com/2019"
+             xmlns:controls="clr-namespace:OpenSky.Client.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <UserControl.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ui:ThemeResources RequestedTheme="Dark">
-                    <ui:ThemeResources.ThemeDictionaries>
-                        <ResourceDictionary x:Key="Dark">
-                            <ResourceDictionary.MergedDictionaries>
-                                <ui:ColorPaletteResources
-                                    TargetTheme="Dark"
-                                    Accent="#05826c"
-                                    AltHigh="#404040"
-                                    BaseHigh="#FFC9C9C9"/>
-                            </ResourceDictionary.MergedDictionaries>
-                        </ResourceDictionary>
-                    </ui:ThemeResources.ThemeDictionaries>
-                </ui:ThemeResources>
-                <ui:XamlControlsResources />
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </UserControl.Resources>
     <Grid Margin="15">
             <TextBlock FontSize="18">Welcome to the Alpha version of the OpenSky client!</TextBlock>
     </Grid>
-</UserControl>
+</controls:OpenSkyPage>
