Most of dataimport implemented
Might move status update text and progressbar to seperate section that shows all data imports, so the tab can be closed and progress monitoring resumed (this will require new method in the api)

--- a/OpenSky.Client/Pages/Settings.xaml
+++ b/OpenSky.Client/Pages/Settings.xaml
@@ -24,7 +24,7 @@
     <StackPanel Orientation="Vertical" Margin="15" Grid.IsSharedSizeScope="True">
         <GroupBox>
             <GroupBox.Header>
-                <TextBlock FontSize="15" FontWeight="DemiBold">OpenSky Account</TextBlock>
+                <TextBlock FontWeight="DemiBold">OpenSky Account</TextBlock>
             </GroupBox.Header>
             <Grid Margin="5">
                 <Grid.ColumnDefinitions>
