--- a/OpenSky.Client/Pages/DataImport.xaml
+++ b/OpenSky.Client/Pages/DataImport.xaml
@@ -15,17 +15,31 @@
                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                  xmlns:controls="clr-namespace:OpenSky.Client.Controls"
+                 xmlns:models="clr-namespace:OpenSky.Client.Pages.Models"
                  mc:Ignorable="d" 
                  d:DesignHeight="450" d:DesignWidth="800">
+    <controls:OpenSkyPage.DataContext>
+        <models:DataImportViewModel />
+    </controls:OpenSkyPage.DataContext>
     <StackPanel Orientation="Vertical" Margin="15">
-        <GroupBox Header="Little Navmap">
+        <GroupBox>
+            <GroupBox.Header>
+                <TextBlock FontWeight="DemiBold">Little Navmap</TextBlock>
+            </GroupBox.Header>
             <Grid Margin="5">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="0" VerticalAlignment="Center">Upload Little Navmap database with MSFS airport data</TextBlock>
-                <Button Grid.Column="1" Style="{StaticResource OpenSkyButtonStyle}">Browse...</Button>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">Upload Little Navmap database with MSFS airport data</TextBlock>
+                <Button Grid.Row="0" Grid.Column="1" Style="{StaticResource OpenSkyButtonStyle}" Command="{Binding BrowseLittleNavmapMSFSCommand}">Browse...</Button>
+                <ProgressBar Grid.Row="1" Grid.ColumnSpan="2" Grid.Column="0" Margin="0,10" Height="15" MaxHeight="15" Maximum="{Binding ProgressMax}" Value="{Binding ProgressValue}" />
+                <TextBox Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" MinLines="25" MaxLines="25" IsReadOnly="True" VerticalScrollBarVisibility="Visible" FontFamily="Consolas" Text="{Binding LogText}" TextChanged="TextBoxBaseOnTextChanged" />
             </Grid>
         </GroupBox>
     </StackPanel>
