--- a/OpenSky.Client/Pages/WorldPopulation.xaml
+++ b/OpenSky.Client/Pages/WorldPopulation.xaml
@@ -6,57 +6,197 @@
              xmlns:controls="clr-namespace:OpenSky.Client.Controls"
              xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
              xmlns:models="clr-namespace:OpenSky.Client.Pages.Models"
-             xmlns:openSkyApi="clr-namespace:OpenSkyApi"
-             xmlns:converters="clr-namespace:OpenSky.Client.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" HorizontalScrollBar="False" LoadingText="{Binding LoadingText}">
     <UserControl.DataContext>
         <models:WorldPopulationViewModel />
     </UserControl.DataContext>
-    <StackPanel Orientation="Vertical">
+    <StackPanel Orientation="Vertical" Grid.IsSharedSizeScope="True" Margin="5,0,20,0">
         <GroupBox>
             <GroupBox.Header>
                 <TextBlock>Airports</TextBlock>
             </GroupBox.Header>
             <Grid Margin="10,0">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" SharedSizeGroup="Totals" />
+                    <ColumnDefinition Width="Auto" SharedSizeGroup="Diagram1" />
+                    <ColumnDefinition Width="Auto" SharedSizeGroup="Diagram2" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Grid.Column="0" FontSize="60" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.TotalAirports}" />
-                <TextBlock Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" Margin="0,-10,0,10" VerticalAlignment="Top">Total Airports</TextBlock>
+                <TextBlock Grid.Row="0" Grid.Column="0" FontSize="60" Margin="30,0,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.TotalAirports}" />
+                <TextBlock Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" Margin="30,-10,30,10" VerticalAlignment="Top">Total Airports</TextBlock>
                 <syncfusion:SfChart Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Height="220" Padding="0" Width="320">
-                    <syncfusion:SfChart.Resources>
-                        <DataTemplate x:Key="AirportSizeLabelTemplate" DataType="{x:Type syncfusion:ChartPieAdornment}">
-                            <DataTemplate.Resources>
-                                <converters:AirportSizeAdornerConverter x:Key="AirportSizeAdornerConverter" />
-                            </DataTemplate.Resources>
-                            <Border Background="{Binding Background}" CornerRadius="2">
-                                <StackPanel Orientation="Horizontal">
-                                    <TextBlock Margin="3,1" Text="{Binding Item, Converter={StaticResource AirportSizeAdornerConverter}}" FontSize="11" />
-                                </StackPanel>
-                            </Border>
-                        </DataTemplate>
-                    </syncfusion:SfChart.Resources>
                     <syncfusion:SfChart.Series>
-                        <syncfusion:DoughnutSeries ItemsSource="{Binding Overview.AirportSizes}" XBindingPath="Size" YBindingPath="Airports" EnableAnimation="True" EnableSmartLabels="True" DoughnutCoefficient="0.5" LabelPosition="OutsideExtended" StartAngle="-45" EndAngle="315" GroupMode="Angle" GroupTo="5">
+                        <syncfusion:DoughnutSeries ItemsSource="{Binding Overview.AirportSizes}" XBindingPath="Key" YBindingPath="Value" EnableAnimation="True" EnableSmartLabels="True" DoughnutCoefficient="0.5" LabelPosition="OutsideExtended" StartAngle="-45" EndAngle="315" GroupMode="Angle" GroupTo="5" SegmentSpacing="0.03" Palette="Custom" ColorModel="{StaticResource OpenSkyTealChartColors}">
                             <syncfusion:DoughnutSeries.AdornmentsInfo>
                                 <syncfusion:ChartAdornmentInfo 
                                     ShowLabel="True"
                                     ShowConnectorLine="True"
                                     ConnectorHeight="15"
                                     UseSeriesPalette="True"
-                                    LabelTemplate="{StaticResource AirportSizeLabelTemplate}"
-                                    SegmentLabelContent="LabelContentPath"/>
-
+                                    LabelTemplate="{StaticResource PieChartValueLabelTemplate}"
+                                    SegmentLabelContent="LabelContentPath" />
                             </syncfusion:DoughnutSeries.AdornmentsInfo>
                             <syncfusion:DoughnutSeries.CenterView>
                                 <ContentControl HorizontalAlignment="Center" VerticalAlignment="Center">
-                                    <TextBlock FontSize="40">Size</TextBlock>
+                                    <TextBlock FontSize="30">Size</TextBlock>
+                                </ContentControl>
+                            </syncfusion:DoughnutSeries.CenterView>
+                        </syncfusion:DoughnutSeries>
+                    </syncfusion:SfChart.Series>
+                </syncfusion:SfChart>
+                <syncfusion:SfChart Margin="30,0,0,0" Grid.Row="0" Grid.Column="2" Grid.RowSpan="2" Height="220" Padding="0" Width="320">
+                    <syncfusion:SfChart.Series>
+                        <syncfusion:DoughnutSeries ItemsSource="{Binding Overview.FuelAvailability}" XBindingPath="Key" YBindingPath="Value" EnableAnimation="True" EnableSmartLabels="True" DoughnutCoefficient="0.5" LabelPosition="OutsideExtended" GroupMode="Angle" GroupTo="0" SegmentSpacing="0.05" Palette="Custom" ColorModel="{StaticResource OpenSkyTealChartColors}">
+                            <syncfusion:DoughnutSeries.AdornmentsInfo>
+                                <syncfusion:ChartAdornmentInfo 
+                                    ShowLabel="True"
+                                    ShowConnectorLine="True"
+                                    ConnectorHeight="15"
+                                    UseSeriesPalette="True"
+                                    LabelTemplate="{StaticResource PieChartValueLabelTemplate}"
+                                    SegmentLabelContent="LabelContentPath" />
+                            </syncfusion:DoughnutSeries.AdornmentsInfo>
+                            <syncfusion:DoughnutSeries.CenterView>
+                                <ContentControl HorizontalAlignment="Center" VerticalAlignment="Center">
+                                    <TextBlock FontSize="30">Fuel</TextBlock>
+                                </ContentControl>
+                            </syncfusion:DoughnutSeries.CenterView>
+                        </syncfusion:DoughnutSeries>
+                    </syncfusion:SfChart.Series>
+                </syncfusion:SfChart>
+            </Grid>
+        </GroupBox>
+        <GroupBox>
+            <GroupBox.Header>
+                <TextBlock>Runways</TextBlock>
+            </GroupBox.Header>
+            <Grid Margin="10,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" SharedSizeGroup="Totals" />
+                    <ColumnDefinition Width="Auto" SharedSizeGroup="Diagram1" />
+                    <ColumnDefinition Width="Auto" SharedSizeGroup="Diagram2" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Row="0" Grid.Column="0" FontSize="60" Margin="30,0,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.TotalRunways}" />
+                <TextBlock Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" Margin="30,-10,30,10" VerticalAlignment="Top">Total Runways</TextBlock>
+                <syncfusion:SfChart Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Height="220" Padding="0" Width="320">
+                    <syncfusion:SfChart.Series>
+                        <syncfusion:DoughnutSeries ItemsSource="{Binding Overview.RunwaySurfaces}" XBindingPath="Key" YBindingPath="Value" EnableAnimation="True" EnableSmartLabels="True" DoughnutCoefficient="0.5" LabelPosition="Outside" StartAngle="-45" EndAngle="315" GroupMode="Angle" GroupTo="5" SegmentSpacing="0.03" Palette="Custom" ColorModel="{StaticResource OpenSkyTealChartColors}">
+                            <syncfusion:DoughnutSeries.AdornmentsInfo>
+                                <syncfusion:ChartAdornmentInfo 
+                                    ShowLabel="True"
+                                    ShowConnectorLine="True"
+                                    ConnectorHeight="15"
+                                    UseSeriesPalette="True"
+                                    LabelTemplate="{StaticResource PieChartValueLabelOthersTemplate}"
+                                    SegmentLabelContent="LabelContentPath" />
+                            </syncfusion:DoughnutSeries.AdornmentsInfo>
+                            <syncfusion:DoughnutSeries.CenterView>
+                                <ContentControl HorizontalAlignment="Center" VerticalAlignment="Center">
+                                    <TextBlock FontSize="30">Surface</TextBlock>
+                                </ContentControl>
+                            </syncfusion:DoughnutSeries.CenterView>
+                        </syncfusion:DoughnutSeries>
+                    </syncfusion:SfChart.Series>
+                </syncfusion:SfChart>
+                <syncfusion:SfChart Margin="30,0,0,0" Grid.Row="0" Grid.Column="2" Grid.RowSpan="2" Height="220" Padding="0" Width="320">
+                    <syncfusion:SfChart.Series>
+                        <syncfusion:DoughnutSeries ItemsSource="{Binding Overview.RunwayLights}" XBindingPath="Key" YBindingPath="Value" EnableAnimation="True" EnableSmartLabels="True" DoughnutCoefficient="0.5" LabelPosition="OutsideExtended" GroupMode="Angle" GroupTo="0" SegmentSpacing="0.02" Palette="Custom" ColorModel="{StaticResource OpenSkyTealChartColors}">
+                            <syncfusion:DoughnutSeries.AdornmentsInfo>
+                                <syncfusion:ChartAdornmentInfo 
+                                    ShowLabel="True"
+                                    ShowConnectorLine="True"
+                                    ConnectorHeight="15"
+                                    UseSeriesPalette="True"
+                                    LabelTemplate="{StaticResource PieChartValueLabelTemplate}"
+                                    SegmentLabelContent="LabelContentPath" />
+                            </syncfusion:DoughnutSeries.AdornmentsInfo>
+                            <syncfusion:DoughnutSeries.CenterView>
+                                <ContentControl HorizontalAlignment="Center" VerticalAlignment="Center">
+                                    <TextBlock FontSize="30">Lights</TextBlock>
+                                </ContentControl>
+                            </syncfusion:DoughnutSeries.CenterView>
+                        </syncfusion:DoughnutSeries>
+                    </syncfusion:SfChart.Series>
+                </syncfusion:SfChart>
+            </Grid>
+        </GroupBox>
+        <GroupBox>
+            <GroupBox.Header>
+                <TextBlock>Approaches</TextBlock>
+            </GroupBox.Header>
+            <Grid Margin="10,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" SharedSizeGroup="Totals" />
+                    <ColumnDefinition Width="Auto" SharedSizeGroup="Diagram1" />
+                    <ColumnDefinition Width="Auto" SharedSizeGroup="Diagram2" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Row="0" Grid.Column="0" FontSize="60" Margin="30,0,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.TotalApproaches}" />
+                <TextBlock Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" Margin="30,-10,30,10" VerticalAlignment="Top">Total Approaches</TextBlock>
+                <syncfusion:SfChart Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Height="220" Padding="0" Width="320">
+                    <syncfusion:SfChart.Series>
+                        <syncfusion:DoughnutSeries ItemsSource="{Binding Overview.ApproachTypes}" XBindingPath="Key" YBindingPath="Value" EnableAnimation="True" EnableSmartLabels="True" DoughnutCoefficient="0.5" LabelPosition="Outside" StartAngle="20" EndAngle="380"  GroupMode="Angle" GroupTo="5" SegmentSpacing="0.03" Palette="Custom" ColorModel="{StaticResource OpenSkyTealChartColors}">
+                            <syncfusion:DoughnutSeries.AdornmentsInfo>
+                                <syncfusion:ChartAdornmentInfo 
+                                    ShowLabel="True"
+                                    ShowConnectorLine="True"
+                                    ConnectorHeight="15"
+                                    UseSeriesPalette="True"
+                                    LabelTemplate="{StaticResource PieChartValueLabelTemplate}"
+                                    SegmentLabelContent="LabelContentPath" />
+                            </syncfusion:DoughnutSeries.AdornmentsInfo>
+                            <syncfusion:DoughnutSeries.CenterView>
+                                <ContentControl HorizontalAlignment="Center" VerticalAlignment="Center">
+                                    <TextBlock FontSize="30">Type</TextBlock>
+                                </ContentControl>
+                            </syncfusion:DoughnutSeries.CenterView>
+                        </syncfusion:DoughnutSeries>
+                    </syncfusion:SfChart.Series>
+                </syncfusion:SfChart>
+            </Grid>
+        </GroupBox>
+        <GroupBox>
+            <GroupBox.Header>
+                <TextBlock>Aircraft</TextBlock>
+            </GroupBox.Header>
+            <Grid Margin="10,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" SharedSizeGroup="Totals" />
+                    <ColumnDefinition Width="Auto" SharedSizeGroup="Diagram1" />
+                    <ColumnDefinition Width="Auto" SharedSizeGroup="Diagram2" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Row="0" Grid.Column="0" FontSize="60" Margin="30,0,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.TotalAircraft}" />
+                <TextBlock Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" Margin="30,-10,30,10" VerticalAlignment="Top">Total Aircraft</TextBlock>
+                <syncfusion:SfChart Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Height="220" Padding="0" Width="320">
+                    <syncfusion:SfChart.Series>
+                        <syncfusion:DoughnutSeries ItemsSource="{Binding Overview.AircraftCategories}" XBindingPath="Key" YBindingPath="Value" EnableAnimation="True" EnableSmartLabels="True" DoughnutCoefficient="0.5" LabelPosition="Outside" StartAngle="20" EndAngle="380"  GroupMode="Angle" GroupTo="5" SegmentSpacing="0.03" Palette="Custom" ColorModel="{StaticResource OpenSkyTealChartColors}">
+                            <syncfusion:DoughnutSeries.AdornmentsInfo>
+                                <syncfusion:ChartAdornmentInfo 
+                                    ShowLabel="True"
+                                    ShowConnectorLine="True"
+                                    ConnectorHeight="15"
+                                    UseSeriesPalette="True"
+                                    LabelTemplate="{StaticResource PieChartValueLabelTemplate}"
+                                    SegmentLabelContent="LabelContentPath" />
+                            </syncfusion:DoughnutSeries.AdornmentsInfo>
+                            <syncfusion:DoughnutSeries.CenterView>
+                                <ContentControl HorizontalAlignment="Center" VerticalAlignment="Center">
+                                    <TextBlock FontSize="25">Category</TextBlock>
                                 </ContentControl>
                             </syncfusion:DoughnutSeries.CenterView>
                         </syncfusion:DoughnutSeries>
